# webrtc-gstreamer

./: .gitignore  CMakeLists.txt  main.cpp
public/: index.html
